add search documentation, fix method search from post to get
